mi nick y donde me pueden seguir

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
     <H1>
         Este es mi primer hola mundooooooooo
     </H1>
+    <p>
+        conecte mi primer repositorio en github
+        soy ozpina y me pueden seguir en todas las redes sociales
+    </p>
 </body>
 </html>
