mi segudo commit y mi ig

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>
         conecte mi primer repositorio en github
         soy ozpina y me pueden seguir en todas las redes sociales
+        @ozpina en ig
     </p>
 </body>
 </html>
